2008-02-06  Behdad Esfahbod  <behdad@gnome.org>

	* pltcheck.sh: Skip g_bit_*().  Inline functions may end up with
	a local plt if the compiler doesn't support what we want.  Bug #514702

2008-02-06  Murray Cumming,,,  <murrayc@murrayc.com>

	reviewed by: <delete if not using a buddy>

	* gfile.c:
	* gunixinputstream.c:
	* gunixoutputstream.c:

2008-02-06  Tomas Bzatek  <tbzatek@redhat.com>

	* tests/Makefile.am:
	* tests/live-g-file.c:
	* tests/live-g-file.txt:
	New GIO testing module working over real data

2008-02-06  Tomas Bzatek  <tbzatek@redhat.com>

	* glocalfileoutputstream.c (g_local_file_output_stream_close):
	Fallback to rename() if link() is not available
	(when no support on target filesystem)

2008-02-06  Michael Natterer  <mitch@imendio.com>

	* gfileinfo.c (g_file_info_get_icon): replace
	"icon && G_IS_ICON (icon)" by simply "G_IS_ICON (icon)".

2008-02-06  Tomas Bzatek  <tbzatek@redhat.com>

	* gfile.c (g_file_create):
	Documentation update of error codes

2008-02-06  Alexander Larsson  <alexl@redhat.com>

	* gdesktopappinfo.c:
	Update to use both mimeapps.list and
	defaults.list as discussed on xdg list.

2008-02-06  Benjamin Otte  <otte@gnome.org>

	* gasyncresult.c:
	* gfilenamecompleter.c:
	Fix some typos in the documentation.

2008-02-06  Alexander Larsson  <alexl@redhat.com>

	* glocalfile.c (g_local_file_trash):
	Don't succeed with trash if newly created
	trash dir has the wrong owner. (#514696)

2008-02-05  Alexander Larsson  <alexl@redhat.com>

	* glocalfile.c (g_local_file_move):
	Don't spew warnings when destination is not
	a GLocalFile.

2008-02-03  Hans Breuer  <hans@breuer.org>

	* makefile.msc : update

2008-02-01  Michael Natterer  <mitch@imendio.com>

	* gcontenttype.c (_g_unix_content_type_get_parents): assign the
	return value of xdg_mime_list_mime_parents() to a variable of the
	correct type.

2008-02-01  Alexander Larsson  <alexl@redhat.com>

	* gappinfo.c (g_app_info_launch_uris):
	Actually call the launch_uris method, not