@@ -1,3 +1,8 @@
+2008-02-07  Tor Lillqvist  <tml@novell.com>
+
+	* tests/Makefile.am (TEST_PROGS): live-g-file won't build on
+	Win32, too Unix-specific.
+
 2008-02-06  Behdad Esfahbod  <behdad@gnome.org>
 
 	* pltcheck.sh: Skip g_bit_*().  Inline functions may end up with
